@@ -1,3 +1,9 @@
+2009-05-27  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/DataServer.pm: Fixed timestamps for data lists. Made
+	  XML::Simple return an empty string instead of an empty hash when an
+	  empty value is found in an XML data file.
+
 2009-05-12  Sancho Lerena <slerena@gmail.com>
 
 	* pandora_package_installer: Removed old, unused script.
